--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@types/lodash": "^4.14.149",
+    "@types/markdown-it": "^10.0.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
     "node-fetch": "^2.6.0",
+    "node-sass": "^4.13.1",
     "nuxt": "^2.12.2",
+    "nuxt-i18n": "^6.8.1",
     "nuxt-property-decorator": "^2.5.1",
     "qs": "^6.9.3",
     "querystring": "^0.2.0",
+    "vue-typer": "^1.2.0",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
