--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/markdown-it": "^10.0.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
     "node-fetch": "^2.6.0",
@@ -31,6 +32,7 @@
     "qs": "^6.9.3",
     "querystring": "^0.2.0",
     "vue-typer": "^1.2.0",
+    "vuex-module-decorators": "^0.10.1",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
@@ -46,7 +48,6 @@
     "jest": "^24.1.0",
     "sass-loader": "^8.0.2",
     "ts-jest": "^25.0.0",
-    "vue-jest": "^4.0.0-0",
-    "vuex-module-decorators": "^0.16.1"
+    "vue-jest": "^4.0.0-0"
   }
 }
